@@ -9,3 +9,4 @@ Minor Changes
 - Improved dirt generation around main house
 - Fixed naming inconsistencies
 - Changed description
+- Used data from the past month to estimate the total number of houses generated, main house sign message now reflects new estimate
